# doctored

./: Cargo.toml  README.md
doctored/: Cargo.toml
doctored-macros/: Cargo.toml
doctored-macros/src/: lib.rs
doctored-macros/src/doctored/: mod.rs
doctored-macros/src/doctored/nodes/: convert.rs  mod.rs
doctored-macros/src/doctored/parsers/: disregard.rs  highlight.rs  mod.rs  tag.rs
doctored-macros/src/doctored/resolvers/: disregard.rs  highlight.rs  mod.rs  tag.rs
doctored-macros/src/parsers/: highlight.rs  mod.rs  tag.rs
doctored-macros/src/parsers/clipboard/: copy.rs  mod.rs  paste.rs
doctored-macros/src/parsers/summary/: hide.rs  mock.rs  mod.rs
doctored-macros/src/resolvers/: copy.rs  highlight.rs  mod.rs  paste.rs  tag.rs
doctored-macros/src/resolvers/clipboard/: copy.rs  mod.rs  paste.rs
doctored-macros/src/resolvers/summary/: hide.rs  mock.rs  mod.rs
doctored-macros/src/utilities/: context.rs  mod.rs
doctored-macros/src/utilities/attributes/: mod.rs  visit.rs
doctored-macros/src/utilities/nodes/: convert.rs  mod.rs
doctored/src/: lib.rs
doctored/src/guide/: clipboard.rs  copy.rs  highlight.example  highlight.rs  mod.rs  paste.rs  tag.HyperlinkTagged.example  tag.NotTagged.example  tag.Tagged.example  tag.rs
doctored/src/guide/attributes/: clipboard.copy.example  clipboard.rs  disregard.example  disregard.rs  highlight.example  highlight.rs  mod.rs  tag.HyperlinkTagged.example  tag.NotTagged.example  tag.Tagged.example  tag.rs
doctored/src/guide/clipboard/: copy.example  copy.rs  mod.rs  paste.rs
(+27 files in other folders)
