[package]
name = "doctored-macros"
version = "0.1.0"
edition = "2024"
authors = ["Michael Ni <michael.ni678@gmail.com>"]
repository = "https://github.com/michaelni678/doctored"
homepage = "https://github.com/michaelni678/doctored"
readme = "README.md"
license = "Apache-2.0"
keywords = ["documentation"]
description = "Procedural macros for Doctored"

[lib]
proc-macro = true

[features]
extras = []

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
